--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Like</title>
-  <base href="https://kanit147.github.io/angular-like">
+  <base href="https://kanit147.github.io/angular-like/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.34c57ab7888ec1573f9c.css"></head>
